--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 
 <nav>
-  <a href="/One/">One</a> 
-  <a href="/Two/">Two</a> 
-  <a href="/Three/">Three</a> 
-  <a href="/Test/">Test</a>
+  <a href="/One/">猪</a> 
+  <a href="/Two/">牛</a> 
+  <a href="/Three/">羊</a> 
+  <a href="/Test/">鸡</a>
 </nav>
 
 <body>
