--- a/index.html
+++ b/index.html
@@ -2,58 +2,28 @@
 <html lang = "en">
 
 <head>
-<h1> Shaoxian Yang </h1>
+<meta charset="UTF-8">
 </head>
 
-<nav>
-  <a href="/One/">猪</a> 
-  <a href="/Two/">牛</a> 
-  <a href="/Three/">羊</a> 
-  <a href="/Test/">鸡</a>
-</nav>
 
 <body>
 
-<h3> Favorite Food </h3>
-
-<ul>
-  <li>Spice-sour Soup</li>
-  <li>Orange</li>
-  <li>Soy Milk</li>
-  <li>Chicken</li>
-</ul>
-
-<h3> Achievements </h3>
-
-<div>Progress in this course (100%)
-<progress value="100" max="100">
-</progress>
-</div>
-<div>Progress in the Specialization capstone (20%)
-<progress value = "20" max="100">
-</progress>
-</div>
-<div>Progress in life goals (20%)
-<progress value="20" max="100">
-</progress>
-</div>
-
-<h3> More About Me </h3>
-
-<details>
-  <summary>My childhood</summary>
-  <p> I was born in a remote village</p>
-
-</details>
+<h3> 爷爷的祝酒词 </h3>
 
 <p>
-<img src="http://www.intro-webdesign.com/images/newlogo.png" alt="web developing for example" width="320" height="320">
+吉日良辰，喜庆大婚。新郎何超，新娘马灵，欧美联姻，地合天成！月老牵线，海誓山盟！当你们春春的脚步跨入婚姻的大庭，那婚礼进行曲即是上帝的声音，祝愿你们百年好合，互爱互敬；鸳鸯比翼，风雨同行！以家国情怀为己任，以志士仁人为知音。美利坚藏龙卧虎，荟萃精英，他们立德、立言、至诚至信为立身之本；能文能武，能屈能伸，张弛有度，即时代强人。与之为伍，去拥抱未来，去迎接幸福的人生！最后，愿敬奉父母的良好家风代代传承，身居天南地北，亦勿忘双方父母的养育之恩！期待切切，教诲谆淳。
+</p>
+
+<h3> 英文版 </h3>
+
+<p>
+
+It’s a good day and a grand night,  a happy marriage excite! Groom Chao he, with splendid bride. A union between American and European, God’s sending, Earth bending, simply tight. Matched by the Moon the grand auntie, sworn by the weight of mountains and ocean tide. When you proceed into the church, with youthful stride, God’s blessings in wedding marching sprite. A thousand wishes forever he loves her and she him, a hundred years steadily  in you unite. In hurricanes or storms you forward hand in hand, in good times, you fly sky high like mandarin ducks side by side. For country, for others, you take responsibility, as bros, as comrades regard those minds alike. 
+America is where the elite gather, dragons crouch and tigers hide. They stand up for their virtue and for their words; utter integrity and honesty as fundamentals in which they hold pride. With able body and able mind, able to persevere and able to be compliant, know when to recoil and when to strike, those are calibers by which the successful abide.  Blend in them, embrace the bright future, and embark on a new life journey little affright. Now in hopes you carry on the good family tradition, pass on to the next generation with no oversight. kindly remember parents  in your rise even though in an away city you likely reside. Hopes are dear, words are non-trite.
+
 </p>
 
 </body>
 
-<footer>
-This page was created by Shaoxian Yang &amp;Colleen van Lent. To learn more about web design, visit <a href="http://www.intro-webdesign.com/"> Intro to Web Design.</a>
-</footer>
 
 </html>
