--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang = "en">
 
 <head>
-<meta charset="UTF-8"/>
+<meta charset="UTF-8">
+<title>For Fun</title>
 </head>
 
+<h2> 点点滴滴 </h2>
 
 <body>
 
