--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 <head>
 <meta charset="UTF-8">
 <title>For Fun</title>
+<link rel="stylesheet" type="text/css" href="css/cssfile1.css"/>
 </head>
 
-<h2> 点点滴滴 </h2>
+<h1> 点点滴滴 </h1>
 
 <body>
 
-<h3> 爷爷的祝酒词 </h3>
+<h2> 爷爷的祝酒词 </h2>
 
 <p>
 吉日良辰，喜庆大婚。新郎何超，新娘马灵，欧美联姻，地合天成！月老牵线，海誓山盟！当你们春春的脚步跨入婚姻的大庭，那婚礼进行曲即是上帝的声音，祝愿你们百年好合，互爱互敬；鸳鸯比翼，风雨同行！以家国情怀为己任，以志士仁人为知音。美利坚藏龙卧虎，荟萃精英，他们立德、立言、至诚至信为立身之本；能文能武，能屈能伸，张弛有度，即时代强人。与之为伍，去拥抱未来，去迎接幸福的人生！最后，愿敬奉父母的良好家风代代传承，身居天南地北，亦勿忘双方父母的养育之恩！期待切切，教诲谆淳。
 </p>
 
-<h3> 英文版 </h3>
+<h2> 英文版 </h2>
 
 <p>
 
