--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>For Fun</title>
-<link rel="stylesheet" type="text/css" href="css/cssfile1.css"/>
+<link rel="stylesheet" href="css/cssfile1.css"/>
 </head>
 
 <h1> 点点滴滴 </h1>
